<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtDescriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_course_label"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:lineSpacingExtra="2dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/txtWhatYouLearnTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_you_learn_label"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:id="@+id/layoutChecklist"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/txtSkillsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skill_learned"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/layoutSkills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:flexWrap="wrap"
            app:justifyContent="flex_start"/>

        <Button
            android:id="@+id/btnJoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_course"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>
</ScrollView>